--- a/bower.json
+++ b/bower.json
@@ -16,5 +16,9 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "devDependencies": {
+    "bootstrap": "~3.3.4",
+    "angular": "~1.4.0"
+  }
 }
